Fix icon spacing on mobile

--- a/style.css
+++ b/style.css
@@ -344,7 +344,4 @@ nav a:hover {
     .bottomtext {
         padding: 0;
     }
-    .icons {
-        justify-content: center;
-    }
 }
